--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,35 @@
-<html lang="hu"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Szabó Martin</title><link rel="stylesheet" href="css/main.min.css"/><link href="https://fonts.googleapis.com/css2?family=Changa:wght@500&amp;display=swap" rel="stylesheet"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css"/><link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/></head><body><div class="stage-container"><div class="stage animated fadeIn" id="stage-1"><div class="left-side"><p class="name animated fadeIn faster">Szabó Martin</p><p class="secondary animated fadeIn faster">Szoftverfejlesztő</p></div><div class="wrapper animated fadeInDown delay-1s"><div class="down-wrapper second"><div class="wrapper"><div class="down-container"><i class="fa fa-chevron-down"></i></div></div></div><div class="down-wrapper animated fadeInDown delay-1s"><div class="wrapper"><div class="down-container"><i class="fa fa-chevron-down"></i></div></div></div></div></div><div class="stage"><p>stage1</p></div><div class="stage"><p>stage2</p></div></div></body></html>
+
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
+    <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
+    <title>Szabó Martin - Főoldal</title>
+  </head>
+  <body>
+    <div class="main-col">
+      <div class="ui secondary pointing menu"><a class="item active" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a>
+        <div class="right menu"><a class="ui item" href="index.html">Kapcsolat</a></div>
+      </div>
+      <div class="ui segment">
+        <div class="ui items">
+          <div class="item">
+            <div class="image"> <img src="images/prof.jpg" alt="alt"/></div>
+            <div class="content"><a class="header" href="#">Szabó Martin</a>
+              <div class="description">
+                <p>Eötvös Loránd Tudományegyetem Informatika karának hallgatója</p>
+              </div>
+              <div class="meta"><i class="github icon"></i><a target="_blank" href="https://github.com/szaffo">github.com/szaffo</a></div>
+              <div class="meta"><i class="envelope icon"></i><span>cqbo0i@inf.elte.hu</span></div>
+              <div class="meta"><i class="envelope icon"></i><span>szaffo@szabomartin.com</span></div>
+              <div class="meta"><i class="phone icon"></i><span>06-20/269-22-99</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.min.js"></script>
+  </body>
+</html>
