--- a/public/layout.html
+++ b/public/layout.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Szabó Martin"/>
+    <meta name="description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.szabomartin.com/"/>
+    <meta property="og:title" content="Szabó Martin"/>
+    <meta property="og:image" content="https://www.szabomartin.com/images/prof.jpg"/>
+    <meta property="og:description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta property="og:determiner" content=""/>
+    <meta property="og:site_name" content="Szabó Martin"/>
+    <meta property="og:site_name" content="Szabó Martin"/>
+    <meta name="twitter:title" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta name="twitter:image" content="https://www.szabomartin.com/images/prof.jpg"/>
+    <meta name="twitter:description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
   </head>
