--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <title>Főoldal</title>
+    <title>Nem talált</title>
   </head>
   <body>
     <div class="main-col">
@@ -28,22 +28,8 @@
       <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a>
         <div class="right menu"><a class="ui item" href="index.html">Kapcsolat</a></div>
       </div>
-      <div class="ui segment">
-        <div class="ui items">
-          <div class="item">
-            <div class="image"> <img src="images/prof.jpg" alt="Szabó Martin profilképe"/></div>
-            <div class="content"><a class="header" href="#">Szabó Martin</a>
-              <div class="description">
-                <p>Eötvös Loránd Tudományegyetem Informatika karának hallgatója</p>
-              </div>
-              <div class="meta"><i class="github icon"></i><a target="_blank" href="https://github.com/szaffo">github.com/szaffo</a></div>
-              <div class="meta"><i class="envelope icon"></i><span>cqbo0i@inf.elte.hu</span></div>
-              <div class="meta"><i class="envelope icon"></i><span>szaffo@szabomartin.com</span></div>
-              <div class="meta"><i class="phone icon"></i><span>06-20/269-22-99</span></div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h1 class="header large">A kért oldal nem található</h1>
+      <h2 class="sub header">HTTP 404</h2>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.min.js"></script>
