--- a/public/projects.html
+++ b/public/projects.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="Szabó Martin"/>
-    <meta name="description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta name="description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.szabomartin.com/"/>
     <meta property="og:title" content="Szabó Martin"/>
     <meta property="og:image" content="https://www.szabomartin.com/images/prof.jpg"/>
-    <meta property="og:description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta property="og:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <meta property="og:determiner" content=""/>
     <meta property="og:site_name" content="Szabó Martin"/>
     <meta property="og:site_name" content="Szabó Martin"/>
-    <meta name="twitter:title" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta name="twitter:title" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <meta name="twitter:image" content="https://www.szabomartin.com/images/prof.jpg"/>
-    <meta name="twitter:description" content="Eötvös Loránd Tudományegyetem Informatika karának hallgatója"/>
+    <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <title>Szabó Martin - Projektek</title>
+    <title>Projektek</title>
   </head>
   <body>
     <div class="main-col">
+      <div style="display:hidden;">
+        <h1>Szabó Martin oldala</h1>
+      </div>
       <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item active" href="projects.html">Projektek</a>
         <div class="right menu"><a class="ui item" href="index.html">Kapcsolat</a></div>
       </div>
