--- a/public/projects.html
+++ b/public/projects.html
@@ -18,11 +18,11 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <title>Projektek</title>
+    <title>Szabó Martin - Projektek</title>
   </head>
   <body>
     <div class="main-col">
-      <div style="display:hidden;">
+      <div style="display:none;">
         <h1>Szabó Martin oldala</h1>
       </div>
       <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item active" href="projects.html">Projektek</a>
