--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="main-col">
-      <div style="display:hidden;">
+      <div style="display:none;">
         <h1>Szabó Martin oldala</h1>
       </div>
       <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a>
