--- a/public/projects.html
+++ b/public/projects.html
@@ -31,6 +31,13 @@
       <div class="ui segment">
         <div class="ui items divided relaxed">
           <div class="item">
+            <div class="content"> <a class="header" target="_blank" href="https://github.com/szaffo/dudeGame">Dude Java játék</a>
+              <div class="description">
+                <p>Egy Java játék, ami beadandónak indult. Platformer, rage game.</p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
             <div class="content"> <a class="header" target="_blank" href="https://diakkedvezmeny.com">Országos Diákkedvezmény Adatbázis</a>
               <div class="description">
                 <p>Diákkedvezményeket összegyűjtő oldal</p>
