added links page

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <div style="display:none;">
         <h1>Szabó Martin oldala</h1>
       </div>
-      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a>
+      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a>
         <div class="right menu"><a class="ui item" href="index.html">Kapcsolat</a></div>
       </div>
       <div class="ui segment">
