--- a/public/links.html
+++ b/public/links.html
@@ -18,14 +18,24 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
+    <title>Szabó Martin - Linkek</title>
   </head>
   <body>
     <div class="main-col">
       <div style="display:none;">
         <h1>Szabó Martin oldala</h1>
       </div>
-      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a>
+      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item active" href="links.html">Linkek</a>
         <div class="right menu"><a class="ui item" href="index.html">Kapcsolat</a></div>
+      </div>
+      <div class="ui segment">
+        <div class="ui very relaxed divided list">
+          <div class="item"><i class="large file middle aligned icon"></i>
+            <div class="content"><a class="header" href="adatb.html">Adatb próbavizsga</a>
+              <div class="description">2020.05.25.</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
