removed menu, updateed adatb

--- a/public/adatb.html
+++ b/public/adatb.html
@@ -18,87 +18,129 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <title>Szabó Martin - Próbavizsga</title>
+    <title>Szabó Martin - Adatb helper</title>
   </head>
   <body>
     <div class="main-col">
       <div style="display:none;">
         <h1>Szabó Martin oldala</h1>
       </div>
-      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a>
-        <div class="right menu"><a class="ui item" href="index.html">Kapcsolat</a></div>
+      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a>
       </div>
-  
       <div class="ui segment">
-
-     
-
-        <h1 id="adatbázisok-i-viszga-gyakorlás">Adatbázisok I Vizsga gyakorlás</h1>
+        <h1 id="adatbázisok-i-viszga-gyakorlás">Adatbázisok I Viszga gyakorlás</h1>
         <ul>
           <li><a href="#adatb%C3%A1zisok-i-viszga-gyakorl%C3%A1s">Adatbázisok I Viszga gyakorlás</a>
             <ul>
-              <li><a href="#1-t%C3%A9ma-rel">1. téma [REL]</a>
+              <li><a href="#linkek">Linkek</a></li>
+              <li><a href="#feladatok-pr%C3%B3bavizsg%C3%A1n">Feladatok próbavizsgán</a>
                 <ul>
-                  <li><a href="#1feladat">1.feladat</a></li>
-                  <li><a href="#2feladat">2.feladat</a></li>
-                  <li><a href="#3feladat">3.feladat</a></li>
-                </ul>
-              </li>
-              <li><a href="#2-t%C3%A9ma-sql">2. téma [SQL]</a>
-                <ul>
-                  <li><a href="#4feladat">4.feladat</a></li>
-                  <li><a href="#5feladat">5.feladat</a></li>
-                  <li><a href="#6feladat">6.feladat</a></li>
-                </ul>
-              </li>
-              <li><a href="#3-t%C3%A9ma-terv">3. téma [TERV]</a>
-                <ul>
-                  <li><a href="#7feladat">7.feladat</a>
+                  <li><a href="#1-t%C3%A9ma-rel">1. téma [REL]</a>
                     <ul>
-                      <li><a href="#k%C3%A9rd%C3%A9s">Kérdés</a></li>
-                      <li><a href="#megold%C3%A1s">Megoldás</a></li>
+                      <li><a href="#1feladat">1.feladat</a></li>
+                      <li><a href="#2feladat">2.feladat</a></li>
+                      <li><a href="#3feladat">3.feladat</a></li>
                     </ul>
                   </li>
-                  <li><a href="#8feladat">8.feladat</a>
+                  <li><a href="#2-t%C3%A9ma-sql">2. téma [SQL]</a>
                     <ul>
-                      <li><a href="#k%C3%A9rd%C3%A9s-1">Kérdés</a></li>
-                      <li><a href="#megold%C3%A1s-1">Megoldás</a></li>
+                      <li><a href="#4feladat">4.feladat</a></li>
+                      <li><a href="#5feladat">5.feladat</a></li>
+                      <li><a href="#6feladat">6.feladat</a></li>
                     </ul>
                   </li>
-                  <li><a href="#9feladat">9.feladat</a></li>
+                  <li><a href="#3-t%C3%A9ma-terv">3. téma [TERV]</a>
+                    <ul>
+                      <li><a href="#7feladat">7.feladat</a>
+                        <ul>
+                          <li><a href="#k%C3%A9rd%C3%A9s">Kérdés</a></li>
+                          <li><a href="#megold%C3%A1s">Megoldás</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#8feladat">8.feladat</a>
+                        <ul>
+                          <li><a href="#k%C3%A9rd%C3%A9s-1">Kérdés</a></li>
+                          <li><a href="#megold%C3%A1s-1">Megoldás</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#9feladat">9.feladat</a>
+                        <ul>
+                          <li><a href="#k%C3%A9rd%C3%A9s-2">Kérdés</a></li>
+                          <li><a href="#megold%C3%A1s-2">Megoldás</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li><a href="#defin%C3%ADci%C3%B3k">Definíciók</a>
+                <ul>
+                  <li><a href="#rel%C3%A1ci%C3%B3k-febont%C3%A1sa-dekompozici%C3%B3">Relációk febontása (dekompozició)</a></li>
+                  <li><a href="#nem-trivi%C3%A1lis-f%C3%BCgg%C5%91s%C3%A9g">Nem triviális függőség</a></li>
+                  <li><a href="#boyce---codd-norm%C3%A1lforma-bcnf">Boyce - Codd normálforma (BCNF)</a></li>
+                  <li><a href="#els%C5%91dleges-attrib%C3%BAtum-pr%C3%ADmattrib%C3%BAtum">Elsődleges attribútum
+                      (prímattribútum)</a></li>
+                  <li><a href="#harmadik-norm%C3%A1lforma">Harmadik normálforma</a></li>
+                  <li><a href="#minim%C3%A1lis-b%C3%A1zis">Minimális bázis</a></li>
+                  <li><a href="#f%C3%BCgg%C5%91s%C3%A9g%C3%B6rz%C5%91-felbont%C3%A1s">Függőségörző felbontás</a></li>
+                  <li><a href="#f%C3%BCgg%C5%91s%C3%A9gek-vet%C3%BClete">Függőségek vetülete</a></li>
+                </ul>
+              </li>
+              <li><a href="#algoritmusok">Algoritmusok</a>
+                <ul>
+                  <li><a href="#bcnf-re-val%C3%B3-felbont%C3%A1s">BCNF-re való felbontás</a></li>
+                  <li><a href="#minim%C3%A1lis-b%C3%A1zist-kisz%C3%A1m%C3%ADt%C3%B3-algoritmus">Minimális bázist kiszámító
+                      algoritmus</a></li>
                 </ul>
               </li>
             </ul>
           </li>
         </ul>
-        <h2 id="1-téma-rel">1. téma [REL]</h2>
+        <h2 id="linkek">Linkek</h2>
+        <ul>
+          <li><a href="https://dbis-uibk.github.io/relax/calc.htm">ReLax</a></li>
+          <li><a href="https://people.inf.elte.hu/vzoli/Adatbazisok_1/">VZoli honlap</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/SQL1_adatb_hcs.pdf">SQL1 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/SQL2_adatb_hcs.pdf">SQL2 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/SQL3_adatb_hcs.pdf">SQL3 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/REL1_adatb_hcs.pdf">REL1 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/REL2_adatb_hcs.pdf">REL2 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/REL3_adatb_hcs.pdf">REL3 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/REL4_adatb_hcs.pdf">REL4 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/TERV1_adatb_hcs.pdf">TERV1 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/TERV2_adatb_hcs.pdf">TERV2 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/TERV3_adatb_hcs.pdf">TERV3 pdf</a></li>
+          <li><a href="http://sila.hajas.elte.hu/AB1ea/TERV4_adatb_hcs.pdf">TERV4 pdf</a></li>
+        </ul>
+        <h2 id="feladatok-próbavizsgán">Feladatok próbavizsgán</h2>
+        <h3 id="1-téma-rel">1. téma [REL]</h3>
         <p>Relációs lekérdezések, SQL SELECT, Relácós algebra, Datalog</p>
-        <h3 id="1feladat">1.feladat</h3>
+        <h4 id="1feladat">1.feladat</h4>
         <p>ALAP RELÁCIÓS ALGEBRA ÉS DATALOG (REL1, REL3, REL5)</p>
-        <h3 id="2feladat">2.feladat</h3>
+        <h4 id="2feladat">2.feladat</h4>
         <p>KITERJESZTETT REL.ALGEBRA ÉS SQL CSOPORTOSÍTÁS (REL2)</p>
-        <h3 id="3feladat">3.feladat</h3>
+        <h4 id="3feladat">3.feladat</h4>
         <p>SQL HALMAZMŰV., ÖSSZEKAPCS., ALKÉRDÉSEK (REL3, REL4)</p>
-        <h2 id="2-téma-sql">2. téma [SQL]</h2>
+        <h3 id="2-téma-sql">2. téma [SQL]</h3>
         <p>DBMS alapok, SQL DDL, SQL DML, PL/SQL (SQL/PSM), Rekurzió;</p>
-        <h3 id="4feladat">4.feladat</h3>
+        <h4 id="4feladat">4.feladat</h4>
         <p>SQL DDL és DML UTASÍTÁSAI (SQL1, SQL2, SQL3)</p>
-        <h3 id="5feladat">5.feladat</h3>
+        <h4 id="5feladat">5.feladat</h4>
         <p>PL/SQL TÁROLT ELJÁRÁSOK ÉS FÜGGVÉNYEK (SQL4)</p>
-        <h3 id="6feladat">6.feladat</h3>
+        <h4 id="6feladat">6.feladat</h4>
         <p>REKURZIÓ AZ ORACLE SQL WITH UTASÍTÁSA (SQL5)</p>
-        <h2 id="3-téma-terv">3. téma [TERV]</h2>
+        <h3 id="3-téma-terv">3. téma [TERV]</h3>
         <p>E/K modellezés, relációs adatbázis sématervezés, normalizálás.</p>
-        <h3 id="7feladat">7.feladat</h3>
+        <h4 id="7feladat">7.feladat</h4>
         <p>E/K MODELL ÉS ÁTALAKÍTÁSA REL.MODELLRE (<a href="http://sila.hajas.elte.hu/AB1ea/TERV1_adatb_hcs.pdf">TERV1</a>, <a
             href="http://sila.hajas.elte.hu/AB1ea/TERV2_adatb_hcs.pdf">TERV2</a>)</p>
-        <h4 id="kérdés">Kérdés</h4>
+        <h5 id="kérdés">Kérdés</h5>
         <p>Írja le szövegesen hogyan jelöljük az E/K diagramban a bináris kapcsolatok háromféle típusát.</p>
         <p>Tegyük fel, hogy a K kapcsolat két erős egyedhalmazt az R(Kulcs1, A, B)-t és S(Kulcs2, C)-t kapcsolja össze, és a K
           kapcsolatnak is van egy saját attribútuma, a D.</p>
         <p>Adja meg a &quot;sok-egy&quot; típusú kapcsolat esetén hogyan alakítjuk át ezt az E/K diagramot relációs sémákra, és
           milyen reláció sémákat eredményez ez a módszer?</p>
-        <h4 id="megoldás">Megoldás</h4>
+        <h5 id="megoldás">Megoldás</h5>
         <p><strong>Típusok:</strong><br>
           A bináris kapcsolatok három típusa a sok-sok, sok-egy, és az egy-egy.</p>
         <p>A sok-egy kapcsolatok átírásának 1. lépése, hogy a kapcsolatokból is relációs sémát csinálunk, így a következő
@@ -114,16 +156,16 @@
         <p><strong>Így a végleges sémák:</strong></p>
         <p>R(<ins>Kulcs1</ins>, A, B, Kulcs2, D) <br>
           S(<ins>Kulcs2</ins>, C)</p>
-        <h3 id="8feladat">8.feladat</h3>
-        <p>RELÁCIÓS SÉMATERVEZÉS FÜGGŐSÉGEK ELMÉLETE (<a
-            href="https://web.microsoftstream.com/video/f32b27e3-9e6a-43f6-9ee1-58a63a428416?channelId=242f4474-0547-4e10-bfa3-e2b807d002dc">TERV3</a>)
-        </p>
-        <h4 id="kérdés-1">Kérdés</h4>
+        <h4 id="8feladat">8.feladat</h4>
+        <p>RELÁCIÓS SÉMATERVEZÉS FÜGGŐSÉGEK ELMÉLETE (TERV3 (<a
+            href="https://web.microsoftstream.com/video/f32b27e3-9e6a-43f6-9ee1-58a63a428416?channelId=242f4474-0547-4e10-bfa3-e2b807d002dc">videó</a>,
+          <a href="http://sila.hajas.elte.hu/AB1ea/TERV3_adatb_hcs.pdf">pdf</a>))</p>
+        <h5 id="kérdés-1">Kérdés</h5>
         <p>Adja meg egy attribútum-halmaz F -beli függőségek szerinti lezártja definícióját!</p>
         <p>Legyen adott az ABCDEF attribútum-halmaz és ezen az F = {AB-&gt;C, BC-&gt;AD, D-&gt;E, CF-&gt;B} függőségi halmaz.
         </p>
         <p>Számítsuk ki az attribútum-halmaz lezártját kiszámító algoritmussal az AB attribútum halmaz lezártját!</p>
-        <h4 id="megoldás-1">Megoldás</h4>
+        <h5 id="megoldás-1">Megoldás</h5>
         <p><strong>Def:</strong><br>
           Adott R séma és F funkcionális függőségek halmaza mellett, X+ az összes olyan A attribútum halmaza, amire X-&gt;A
           következik F-ből.<br>
@@ -141,15 +183,115 @@
           Nem változik tovább, tehát X+ = ABCDE</p>
         <p><strong>Megjegyzés</strong><br>
           Az AB attribútum halmaz lezártja nem tartalmazza az F attribútumot, így az AB nem kulcs.</p>
-        <h3 id="9feladat">9.feladat</h3>
-        <p>NORMÁLFORMÁK ÉS FELBONTÁSOK TULAJDONSÁGAI (<a
-            href="https://web.microsoftstream.com/video/5b940e82-9214-40bc-9261-ebbb36c7f68a?channelId=242f4474-0547-4e10-bfa3-e2b807d002dc">TERV4</a>)
+        <h4 id="9feladat">9.feladat</h4>
+        <p>NORMÁLFORMÁK ÉS FELBONTÁSOK TULAJDONSÁGAI (TERV4 (<a
+            href="https://web.microsoftstream.com/video/5b940e82-9214-40bc-9261-ebbb36c7f68a?channelId=242f4474-0547-4e10-bfa3-e2b807d002dc">videó</a>,
+          <a href="http://sila.hajas.elte.hu/AB1ea/TERV4_adatb_hcs.pdf">pdf</a>))</p>
+        <h5 id="kérdés-2">Kérdés</h5>
+        <p>Adja meg a függőségőrző felbontás definícióját és az ebben szereplő fogalmakat (függőségek vetülete).</p>
+        <p>Határozza meg R:= ABC, F:= {A-&gt;B, B-&gt;C , C-&gt;A} esetén d= (AB, BC) felbontás függőségőrző-e?</p>
+        <h5 id="megoldás-2">Megoldás</h5>
+        <p><strong>def</strong> (Függőségörző felbontás):<br>
+          Adott (R,F) séma esetén d=(R1...Rk) felbontás akkor és csak akkor függőségörző, ha minden F-beli függőség levezethető
+          a vetületi függőségekből:<br>
+          minden X --&gt; Y eleme F esetén πR1(F) unio ... unio πRk(F) |-- X -&gt; Y</p>
+        <p><strong>def</strong> (Függőségek vetülete):<br>
+          Adott (R,F), és Ri része R esetén:<br>
+          πRi(F) := { X --&gt; Y <strong>|</strong> F |-- X --&gt; Y, XY része Ri }</p>
+        <p>R = ABC<br>
+          F = {A-&gt;B, B-&gt;C, C-&gt;A}<br>
+          d = (AB, BC)\</p>
+        <p>Az AB részséma megőrzi az A --&gt; B függőséget. A BC résszséma megőrzi a B --&gt; C függőséget.</p>
+        <p>AB megőrzi az A --&gt; B-t és a projekció miatt a B --&gt; A-t is.</p>
+        <p>BC megőrzi a B --&gt; C-t és a projekció miatt a C --&gt; A-t is.</p>
+        <h2 id="definíciók">Definíciók</h2>
+        <h3 id="relációk-febontása-dekompozició">Relációk febontása (dekompozició)</h3>
+        <p>d = {R1 ... Rk} az (R,F) <strong>dekompozíciója</strong>, ha nem marad ki attribútum, azaz R1 unió ... unió Rk = R
         </p>
+        <blockquote>
+          <p>R = ABCDE felbontása d = {AD, BCE, ABE}</p>
+        </blockquote>
+        <h3 id="nem-triviális-függőség">Nem triviális függőség</h3>
+        <p>X --&gt; Y nem triviális, vagyis Y nem része X-nek</p>
+        <h3 id="boyce---codd-normálforma-bcnf">Boyce - Codd normálforma (BCNF)</h3>
+        <p>R reláció BCNF-ban van, ha:</p>
+        <ul>
+          <li>minden X --&gt; Y nem triviális FF-re R-ben</li>
+          <li>az X szuperkulcs, vagyis az X-ben szereplő attribútomok funkcionálisan meghatározzák a reláció összes többi
+            attribútumát: X --&gt; R</li>
+        </ul>
+        <blockquote>
+          <p><strong>Lemma</strong> Bármely két attribútomból álló reláció BCNF-ban van.</p>
+        </blockquote>
+        <h3 id="elsődleges-attribútum-prímattribútum">Elsődleges attribútum (prímattribútum)</h3>
+        <p>Egy attribútum elsődleges attribútum (prímattribútum), ha legalább egy kulcsnak eleme.</p>
+        <h3 id="harmadik-normálforma">Harmadik normálforma</h3>
+        <p>A harmadik normálformában (3NF) úgy módosul a BCNF feltétel, hogy az előbbi esteben már nem kell dekomponálnunk
+          (megőrizzük a függőséget).</p>
+        <p>Az R reláció 3NF-ban van akkor és csak akkor, ha valahányszor létezik egy X --&gt; A nem triviális függőség, akkor
+          vagy X szuperkulcs, vagy A prímattribútum.</p>
+        <h3 id="minimális-bázis">Minimális bázis</h3>
+        <p>Amikor egy relációhoz választhatunk, hogy milyen ekvivalens funkcionális függőségi halmazt használunk, amelyek
+          reprezentálják egy reláció teljes FF halmazt. Az F minimális bázis, ha az olyan FF-ekből áll, amelyre három
+          &quot;minimális&quot; feltétel igaz:</p>
+        <ol>
+          <li>F összes függőségének jobb oldalán egy attribútum van.</li>
+          <li>Ha bármelyik F-beli függőséget elhagyjuk, a fennmaradó halmaz már nem bázis.</li>
+          <li>Ha bármelyik F-beli funkcionális függőség bal oldalálór elhagyunk egy vagy több attriútumot, akkor az eredmény már
+            nem marad bázis.</li>
+        </ol>
+        <h3 id="függőségörző-felbontás">Függőségörző felbontás</h3>
+        <p>Adott (R, F) séma esetén d = (R1, ... , Rk) felbontás akkor és csak akkor <strong>függőségörző</strong>, ha minden
+          F-beli függőség levezethető a vetöleti függőségből:</p>
+        <p>Minden X --&gt; Y eleme F esetén:<br>
+          π R1 (F) unió ... unió π Rk (F) |-- X --&gt; Y</p>
+        <h3 id="függőségek-vetülete">Függőségek vetülete</h3>
+        <p>Adott (R, F) és Ri eleme R esetén:<br>
+          π Ri (F) := { X --&gt; Y <strong>|</strong> F |-- X --&gt; Y, XY eleme Ri }</p>
+        <h2 id="algoritmusok">Algoritmusok</h2>
+        <h3 id="bcnf-re-való-felbontás">BCNF-re való felbontás</h3>
+        <p>Adott R reláció és F funkcionális függőségek</p>
+        <ol>
+          <li>Ellenőrizzük, hogy R BCNF-ben van-e. Ha igen, akkor készen vagyunk, és {R} a válasz.</li>
+          <li>Ha vannak BCNF-t megsértő függősékek, akkor X --&gt; Y legyen egy ilyen. Kiszámítjuk X+ -t. Legyen <strong>R1 =
+              X+</strong> ez valódi részhalmaza R-nek, nem szerepel benne az összes attrribútum, mivel X nem szuperkulcs (az X
+            --&gt; Y sértette a BCNF-t) <strong>R2 legyen X unió ( R - X+ )</strong>. Ebben benne vannak X attrbútumai és azok
+            az R-beli attribútumok, melyek nincsenek X+ -ban.</li>
+          <li>Az F-beli funkcionális függőségeket vetítsük le az R1 és R2 reláció-sémákra, a vetületek legyenek rendre F1 és F2.
+          </li>
+          <li>Rekurzívan folytassuk a felbontást R1-re illetve R2-re, amíg a kapott séma BCNF nem lesz.</li>
+        </ol>
+        <blockquote>
+          <p>A végeredmény a dekompoziciók eredményeinek uniója lesz</p>
+        </blockquote>
+        <blockquote>
+          <p>Az eljárás biztosan véget ér, mert minden alkalommal a kapott relációk kevesebb attribútumot tartalmaznak, és a 2
+            attrbútomos már mindig BCNF.</p>
+        </blockquote>
+        <h3 id="minimális-bázist-kiszámító-algoritmus">Minimális bázist kiszámító algoritmus</h3>
+        <ol>
+          <li>Kezdetben G az üres halmaz. Minden X --&gt; Y eleme F helyett vegyük az X --&gt; A funkcionális függőségeket, ahol
+            A eleme Y - X</li>
+        </ol>
+        <blockquote>
+          <p>Ekkor minden G-beli függőség X --&gt; A alakú</p>
+        </blockquote>
+        <ol start="2">
+          <li>Minden X --&gt; A eleme G-re, ha X --&gt; A eleme (G - { X --&gt; A })+, vagyis ha elhagyjuk az X --&gt; A
+            függőséget G-ből, az még mindig következik a maradékból, akkor G := G - { X --&gt; A }.</li>
+        </ol>
+        <blockquote>
+          <p>Elhagyható függőségeket mind elhagyjuk</p>
+        </blockquote>
+        <ol start="3">
+          <li>Minden X --&gt; A eleme G-re, amíg van olyan B eleme X -re A eleme (X-B)+ a G-szerint, vgyis (X-B) --&gt; A
+            teljesül, akkor X := X - B</li>
+        </ol>
+        <blockquote>
+          <p>E lépés után minden baloldal minimális lesz.</p>
+        </blockquote>
 
-
-</div>
-
-
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.min.js"></script>
