--- a/public/links.html
+++ b/public/links.html
@@ -30,7 +30,12 @@
       <div class="ui segment">
         <div class="ui very relaxed divided list">
           <div class="item"><i class="large file middle aligned icon"></i>
-            <div class="content"><a class="header" href="adatb.html">Adatb próbavizsga</a>
+            <div class="content"><a class="header" href="adatb.html">Adatb helper</a>
+              <div class="description">2020.05.25.</div>
+            </div>
+          </div>
+          <div class="item"><i class="large file middle aligned icon"></i>
+            <div class="content"><a class="header" href="/stratego">Startego demo</a>
               <div class="description">2020.05.25.</div>
             </div>
           </div>
