--- a/public/projects.html
+++ b/public/projects.html
@@ -28,7 +28,14 @@
       <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item active" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a>
       </div>
       <div class="ui segment">
-        <div class="ui items divided relaxed">
+        <div class="ui items link divided relaxed">  
+          <div class="item">
+            <div class="content"> <a class="header" href="/md2pug.html">Markdown to Pug npm package</a>
+              <div class="description">
+                <p>Első node package-em</p>
+              </div>
+            </div>
+          </div>
           <div class="item">
             <div class="content"> <a class="header" href="/dude.html">Dude Java játék</a>
               <div class="description">
