--- a/public/test.html
+++ b/public/test.html
@@ -18,33 +18,16 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <title>Szabó Martin - Linkek</title>
   </head>
   <body>
     <div class="main-col">
       <div style="display:none;">
         <h1>Szabó Martin oldala</h1>
       </div>
-      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item active" href="links.html">Linkek</a>
+      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a>
       </div>
       <div class="ui segment">
-        <div class="ui very relaxed divided list">
-          <div class="item"><i class="large file middle aligned icon"></i>
-            <div class="content"><a class="header" href="adatb.html">Adatb helper</a>
-              <div class="description">2020.05.25.</div>
-            </div>
-          </div>
-          <div class="item"><i class="gamepad middle aligned icon large"></i>
-            <div class="content"><a class="header" href="/stratego">Startego demo</a>
-              <div class="description">2020.05.25.</div>
-            </div>
-          </div>
-          <div class="item"><i class="npm middle aligned icon large"></i>
-            <div class="content"><a class="header" href="/stratego">Markdown to Pug CLI</a>
-              <div class="description">2020.05.27.</div>
-            </div>
-          </div>
-        </div>
+        <h1>szia</h1>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
