--- a/public/links.html
+++ b/public/links.html
@@ -18,6 +18,9 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/styles/gml.min.css"/>
+    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad()</script>
     <title>Szabó Martin - Linkek</title>
   </head>
   <body>
@@ -40,7 +43,7 @@
             </div>
           </div>
           <div class="item"><i class="npm middle aligned icon large"></i>
-            <div class="content"><a class="header" href="/stratego">Markdown to Pug CLI</a>
+            <div class="content"><a class="header" href="https://www.npmjs.com/package/markdown-to-pug-cli">Markdown to Pug CLI</a>
               <div class="description">2020.05.27.</div>
             </div>
           </div>
