--- a/public/links.html
+++ b/public/links.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
     <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/styles/gml.min.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/styles/monokai.min.css"/>
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad()</script>
     <title>Szabó Martin - Linkek</title>
@@ -32,6 +32,11 @@
       </div>
       <div class="ui segment">
         <div class="ui very relaxed divided list">
+          <div class="item"><i class="large file middle aligned icon"></i>
+            <div class="content"><a class="header" href="backendHelper.html">Backend helper</a>
+              <div class="description">2020.05.29.</div>
+            </div>
+          </div>
           <div class="item"><i class="large file middle aligned icon"></i>
             <div class="content"><a class="header" href="adatb.html">Adatb helper</a>
               <div class="description">2020.05.25.</div>
