--- a/public/links.html
+++ b/public/links.html
@@ -33,6 +33,11 @@
       <div class="ui segment">
         <div class="ui very relaxed divided list">
           <div class="item"><i class="large file middle aligned icon"></i>
+            <div class="content"><a class="header" href="szaHelper.html">SZA helper</a>
+              <div class="description">2020.05.31.</div>
+            </div>
+          </div>
+          <div class="item"><i class="large file middle aligned icon"></i>
             <div class="content"><a class="header" href="backendHelper.html">Backend helper</a>
               <div class="description">2020.05.29.</div>
             </div>
