--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,1 @@
-
-<html lang="hu">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="author" content="Szabó Martin"/>
-    <meta name="description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.szabomartin.com/"/>
-    <meta property="og:title" content="Szabó Martin"/>
-    <meta property="og:image" content="https://www.szabomartin.com/images/prof.jpg"/>
-    <meta property="og:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
-    <meta property="og:determiner" content=""/>
-    <meta property="og:site_name" content="Szabó Martin"/>
-    <meta property="og:site_name" content="Szabó Martin"/>
-    <meta name="twitter:title" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
-    <meta name="twitter:image" content="https://www.szabomartin.com/images/prof.jpg"/>
-    <meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika karának hallgatója."/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/>
-    <link rel="stylesheet" href="css/main.min.css" attr="attr"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/styles/gml.min.css"/>
-    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad()</script>
-    <title>Szabó Martin - Főoldal</title>
-  </head>
-  <body>
-    <div class="main-col">
-      <div style="display:none;">
-        <h1>Szabó Martin oldala</h1>
-      </div>
-      <div class="ui secondary pointing menu"><a class="item" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a>
-      </div>
-      <div class="ui segment">
-        <div class="ui items">
-          <div class="item">
-            <div class="image"> <img src="images/prof.jpg" alt="Szabó Martin profilképe"/></div>
-            <div class="content"><a class="header" href="#">Szabó Martin</a>
-              <div class="description">
-                <p>Eötvös Loránd Tudományegyetem Informatika karának hallgatója</p>
-              </div>
-              <div class="meta"><i class="github icon"></i><a target="_blank" href="https://github.com/szaffo">github.com/szaffo</a></div>
-              <div class="meta"><i class="envelope icon"></i><span>cqbo0i@inf.elte.hu</span></div>
-              <div class="meta"><i class="envelope icon"></i><span>szaffo@szabomartin.com</span></div>
-              <div class="meta"><i class="phone icon"></i><span>06-20/269-22-99</span></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.min.js"></script>
-  </body>
-</html>
+<html lang="hu"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="author" content="Szabó Martin"/><meta name="description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika Karának hallgatója."/><meta property="og:type" content="website"/><meta property="og:url" content="https://www.szabomartin.com/"/><meta property="og:title" content="Szabó Martin"/><meta property="og:image" content="https://www.szabomartin.com/images/prof.jpg"/><meta property="og:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika Karának hallgatója."/><meta property="og:determiner" content=""/><meta property="og:site_name" content="Szabó Martin"/><meta property="og:site_name" content="Szabó Martin"/><meta name="twitter:title" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika Karának hallgatója."/><meta name="twitter:image" content="https://www.szabomartin.com/images/prof.jpg"/><meta name="twitter:description" content="Szabó Martin vagyok, az Eötvös Loránd Tudományegyetem Informatika Karának hallgatója."/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.css"/><link rel="stylesheet" href="css/main.min.css" attr="attr"/><link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/styles/monokai.min.css"/><script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script><script>hljs.initHighlightingOnLoad()</script><title>Szabó Martin - Főoldal</title></head><body><div class="main-col"><div style="display:none;"><h1>Szabó Martin oldala</h1></div><div class="ui secondary pointing menu"><a class="item active" href="index.html">Főoldal</a><a class="item" href="projects.html">Projektek</a><a class="item" href="links.html">Linkek</a><a class="item" href="cv.html">Önéletrajz</a></div><div class="ui segment"><div class="ui items"><div class="item"><div class="image"> <img src="images/prof.jpg" alt=""/></div><div class="content"><a class="header" href="#">Szabó Martin</a><div class="description"><p>Az Eötvös Loránd Tudományegyetem Informatika karának hallgatója vagyok, programtervező informatikus szakon.</p></div><div class="meta"><i class="github icon"></i><a target="_blank" href="https://github.com/szaffo">github.com/szaffo</a></div><div class="meta"><i class="envelope icon"></i><span>martin77szabo@gmail.com</span></div><div class="meta"><i class="envelope icon"></i><span>cqbo0i@inf.elte.hu</span></div><div class="meta"><i class="envelope icon"></i><span>szaffo@szabomartin.com</span></div><div class="meta"><i class="phone icon"></i><span>06-20/269-22-99</span></div></div></div></div></div></div><script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/semantic-ui-css@2.4.1/semantic.min.js"></script></body></html>
